bug fixes
successful, response, and error set by cache
+ truncator dropdown in unknown words form doesnt have button disappear on submit

--- a/frontend/vite_kordict/src/components/panel/forms/unknown-word-styles.css
+++ b/frontend/vite_kordict/src/components/panel/forms/unknown-word-styles.css
@@ -9,7 +9,7 @@
     border-radius: 5px;
     text-align: center;
     font-size: 14px;
-    background-color: #777777;
+    background-color: #555555;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 }
 
